--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h2 class="white">Blanche</h2>
     <img src="./images/white.jpeg" alt="white">
     <p><audio src="./audio/blanche.mp3" controls></audio></p>
+    <footer>copyright&copy;Anmol.All Rights Reserved</footer>
 
     
 </body>
